--- a/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj.filters
+++ b/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj.filters
@@ -271,6 +271,9 @@
     <ClInclude Include="CrystalDiskInfo\UtilityFx.h">
       <Filter>Hardware\Disk\CrystalDiskInfo</Filter>
     </ClInclude>
+    <ClInclude Include="resource.h">
+      <Filter>Main</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -727,5 +730,10 @@
     <Xml Include="CPUDatabase.xml">
       <Filter>Config</Filter>
     </Xml>
+  </ItemGroup>
+  <ItemGroup>
+    <ResourceCompile Include="WSHardwarePluginV2.rc">
+      <Filter>Main</Filter>
+    </ResourceCompile>
   </ItemGroup>
 </Project>
