--- a/.gitmodules
+++ b/.gitmodules
@@ -1,5 +1,5 @@
-[submodule "./Libcommon/utfcpp"]
-	path = ./Libcommon/utfcpp
+[submodule "Libcommon/utfcpp"]
+	path = Libcommon/utfcpp
 	url = https://github.com/nemtrif/utfcpp.git
 [submodule "Libcommon/tinyxml2"]
 	path = Libcommon/tinyxml2
