--- a/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj
+++ b/src/WSHardwarePluginV2/WSHardwarePluginV2.vcxproj
@@ -102,7 +102,7 @@
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;$(SolutionDir)..\Libcommon\winreg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -126,7 +126,7 @@
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;$(SolutionDir)..\Libcommon\winreg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -153,7 +153,7 @@
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;$(SolutionDir)..\Libcommon\winreg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Windows</SubSystem>
@@ -181,7 +181,7 @@
       <SDLCheck>true</SDLCheck>
       <RuntimeLibrary>MultiThreadedDLL</RuntimeLibrary>
       <LanguageStandard>stdcpplatest</LanguageStandard>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\Libcommon\spdlog\include;$(SolutionDir)..\Libcommon\winreg;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -210,6 +210,7 @@
     <ClInclude Include="BatteryFromSys.h" />
     <ClInclude Include="BatteryManager.h" />
     <ClInclude Include="BatteryThinkElement.h" />
+    <ClInclude Include="BIOSManager.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="CommonSMBUS.h" />
     <ClInclude Include="CPUConfig.h" />
@@ -233,6 +234,7 @@
     <ClInclude Include="Fintek.h" />
     <ClInclude Include="GenericAudio.h" />
     <ClInclude Include="GenericBattery.h" />
+    <ClInclude Include="GenericBios.h" />
     <ClInclude Include="GenericCPU.h" />
     <ClInclude Include="BaseSMBUS.h" />
     <ClInclude Include="GenericGPU.h" />
@@ -306,6 +308,7 @@
     <ClCompile Include="BatteryFromSys.cpp" />
     <ClCompile Include="BatteryManager.cpp" />
     <ClCompile Include="BatteryThinkElement.cpp" />
+    <ClCompile Include="BIOSManager.cpp" />
     <ClCompile Include="Command.cpp" />
     <ClCompile Include="CommonSMBUS.cpp" />
     <ClCompile Include="CPUConfig.cpp" />
@@ -368,6 +371,7 @@
     <ClCompile Include="Fintek.cpp" />
     <ClCompile Include="GenericAudio.cpp" />
     <ClCompile Include="GenericBattery.cpp" />
+    <ClCompile Include="GenericBios.cpp" />
     <ClCompile Include="GenericCPU.cpp" />
     <ClCompile Include="GenericGPU.cpp" />
     <ClCompile Include="GenericMonitor.cpp" />
